--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
         <modelVersion>4.0.0</modelVersion>
+        <packaging>war</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -76,6 +77,12 @@
             <scope>compile</scope>
         </dependency>
         <!-- Uncomment this to add support for hibernate, bean validation and file uploads -->
+        
+        <dependency>
+   			<groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-tomcat</artifactId>
+   			<scope>provided</scope>
+		</dependency>
         
         <dependency>
             <groupId>org.apache.tapestry</groupId>
@@ -234,17 +241,35 @@
         
     </dependencies>
 	<build>
+	
+		<finalName>furniture</finalName>
 		<plugins>
-			<plugin>
+		
+	<!--  		<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- Run the application using "mvn jetty:run" -->
+			
+			<plugin>
+    			<groupId>org.apache.tomcat.maven</groupId>
+    			<artifactId>tomcat7-maven-plugin</artifactId>
+    			<version>2.2</version>
+    			<configuration>
+        			<url>http://localhost:8080/manager/text</url>
+        			<server>TomcatServer</server>
+        			<path>/</path>
+    			</configuration>
+			</plugin>   -->
+			
+			
+			<!-- Run the application using "mvn jetty:run" 
 			<plugin>
             	<groupId>org.eclipse.jetty</groupId>
             	<artifactId>jetty-maven-plugin</artifactId>
             	<version>9.4.28.v20200408</version>
-			</plugin>
+			</plugin>  -->
+			
+			
 		</plugins>
 	</build>
 </project>
